parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     p -> <empty>
Rule 2     empty -> <empty>
Rule 3     programa -> PROGRAM ID variables statements END PROGRAM ID ending subroutines
Rule 4     ending -> <empty>
Rule 5     variables -> variables variables1
Rule 6     variables -> variables variables2
Rule 7     variables -> variables variables3
Rule 8     variables -> variables variables4
Rule 9     variables -> <empty>
Rule 10    variables1 -> tipo ID loopvars
Rule 11    loopvars -> loopvars COMMA ID
Rule 12    loopvars -> empty
Rule 13    variables2 -> tipo ID EQUAL NUMBER
Rule 14    variables2 -> tipo ID EQUAL REAL
Rule 15    variables3 -> tipo ID paso1dim OPAREN paso2dim NUMBER paso3dim COMMA NUMBER paso4dim CPAREN paso52dim
Rule 16    variables4 -> tipo ID paso1dim OPAREN paso2dim NUMBER paso3dim CPAREN paso51dim
Rule 17    paso1dim -> <empty>
Rule 18    paso2dim -> <empty>
Rule 19    paso3dim -> <empty>
Rule 20    paso4dim -> <empty>
Rule 21    paso51dim -> <empty>
Rule 22    paso52dim -> <empty>
Rule 23    statements -> statements statement
Rule 24    statements -> statement
Rule 25    statements -> <empty>
Rule 26    tipo -> INT
Rule 27    tipo -> REAL
Rule 28    subroutines -> subroutines SUBROUTINE ID paso1subroutine statements END SUBROUTINE paso2subroutine
Rule 29    subroutines -> SUBROUTINE ID paso1subroutine statements END SUBROUTINE paso2subroutine
Rule 30    subroutines -> <empty>
Rule 31    paso1subroutine -> <empty>
Rule 32    paso2subroutine -> <empty>
Rule 33    statement -> ID paso8 EQUAL expression paso9
Rule 34    statement -> ID paso8 OPAREN expression pasogetdim1 COMMA expression pasogetdim2 CPAREN EQUAL expression paso9
Rule 35    statement -> ID paso8 OPAREN expression pasogetdim CPAREN EQUAL expression paso9
Rule 36    statement -> CALL ID callprocedure
Rule 37    statement -> ID COLLON DO paso1do statements paso2do END DO ID
Rule 38    statement -> READ ID readquad
Rule 39    statement -> WRITE write writequad
Rule 40    statement -> IF paso1bool ifs ELSE paso3bool statements END IF paso4bool
Rule 41    statement -> IF paso1bool ifs END IF paso4bool
Rule 42    statement -> EXIT paso4do
Rule 43    statement -> DO ID paso1for EQUAL expression paso2for COMMA expression paso3for COMMA expression statements paso4for1 END DO
Rule 44    statement -> DO ID paso1for EQUAL expression paso2for COMMA expression paso3for statements paso4for2 END DO
Rule 45    statement -> DO paso1do statements paso2do END DO
Rule 46    write -> expression correction
Rule 47    write -> STRING
Rule 48    correction -> <empty>
Rule 49    paso1bool -> <empty>
Rule 50    paso3bool -> <empty>
Rule 51    paso1do -> <empty>
Rule 52    paso2do -> <empty>
Rule 53    paso1for -> <empty>
Rule 54    paso2for -> <empty>
Rule 55    paso3for -> <empty>
Rule 56    paso4for1 -> <empty>
Rule 57    paso4for2 -> <empty>
Rule 58    writequad -> <empty>
Rule 59    readquad -> <empty>
Rule 60    paso8 -> <empty>
Rule 61    paso9 -> <empty>
Rule 62    pasogetdim -> <empty>
Rule 63    pasogetdim1 -> <empty>
Rule 64    pasogetdim2 -> <empty>
Rule 65    callprocedure -> <empty>
Rule 66    ifs -> OPAREN logicexp CPAREN paso2bool THEN statements iffs
Rule 67    paso2bool -> <empty>
Rule 68    paso4bool -> <empty>
Rule 69    iffs -> iffs ELSIF paso3bool OPAREN logicexp CPAREN paso2bool THEN statements
Rule 70    iffs -> ELSIF paso3bool OPAREN logicexp CPAREN paso2bool THEN statements
Rule 71    iffs -> <empty>
Rule 72    paso4do -> <empty>
Rule 73    expression -> expression paso4 PLUS paso23 subexpression paso4
Rule 74    expression -> expression paso4 MINUS paso23 subexpression paso4
Rule 75    expression -> subexpression paso4
Rule 76    paso4 -> <empty>
Rule 77    paso23 -> <empty>
Rule 78    subexpression -> subexpression paso5 MUL paso23 ssubexpression paso5
Rule 79    subexpression -> subexpression paso5 DIV paso23 ssubexpression paso5
Rule 80    subexpression -> ssubexpression paso5
Rule 81    paso5 -> <empty>
Rule 82    ssubexpression -> ID paso1
Rule 83    ssubexpression -> ID paso14 OPAREN expression pasogetdim CPAREN
Rule 84    ssubexpression -> ID paso14 OPAREN expression pasogetdim1 COMMA expression pasogetdim2 CPAREN
Rule 85    ssubexpression -> NUMBER paso12
Rule 86    ssubexpression -> REAL paso13
Rule 87    ssubexpression -> OPAREN paso6 expression CPAREN paso7
Rule 88    paso1 -> <empty>
Rule 89    paso12 -> <empty>
Rule 90    paso13 -> <empty>
Rule 91    paso14 -> <empty>
Rule 92    paso6 -> <empty>
Rule 93    paso7 -> <empty>
Rule 94    andornot -> <empty>
Rule 95    logicexp -> logicexp paso2lgexp AND andornot NOT andornot slogicexp pasonot paso2lgexp
Rule 96    logicexp -> logicexp paso2lgexp OR andornot NOT andornot slogicexp pasonot paso2lgexp
Rule 97    logicexp -> logicexp paso2lgexp AND andornot NOT andornot slogicexp pasonot logicop slogicexp paso1lgexp paso2lgexp
Rule 98    logicexp -> logicexp paso2lgexp OR andornot NOT andornot slogicexp pasonot logicop slogicexp paso1lgexp paso2lgexp
Rule 99    logicexp -> NOT andornot slogicexp pasonot paso2lgexp
Rule 100   logicexp -> slogicexp logicop slogicexp paso1lgexp paso2lgexp
Rule 101   logicexp -> logicexp paso2lgexp AND andornot slogicexp logicop slogicexp paso1lgexp paso2lgexp
Rule 102   logicexp -> logicexp paso2lgexp OR andornot slogicexp logicop slogicexp paso1lgexp paso2lgexp
Rule 103   paso1lgexp -> <empty>
Rule 104   paso2lgexp -> <empty>
Rule 105   pasonot -> <empty>
Rule 106   slogicexp -> OPAREN logicexp CPAREN
Rule 107   slogicexp -> ID paso1
Rule 108   slogicexp -> NUMBER paso12
Rule 109   slogicexp -> REAL paso13
Rule 110   slogicexp -> ID OPAREN expression COMMA expression CPAREN
Rule 111   slogicexp -> ID OPAREN expression CPAREN
Rule 112   logicop -> GT
Rule 113   logicop -> GET
Rule 114   logicop -> NE
Rule 115   logicop -> EQUALS
Rule 116   logicop -> LET
Rule 117   logicop -> LT

Terminals, with rules where they appear

AND                  : 95 97 101
CALL                 : 36
COLLON               : 37
COMMA                : 11 15 34 43 43 44 84 110
CPAREN               : 15 16 34 35 66 69 70 83 84 87 106 110 111
DIV                  : 79
DO                   : 37 37 43 43 44 44 45 45
ELSE                 : 40
ELSIF                : 69 70
END                  : 3 28 29 37 40 41 43 44 45
EQUAL                : 13 14 33 34 35 43 44
EQUALS               : 115
EXIT                 : 42
GET                  : 113
GT                   : 112
ID                   : 3 3 10 11 13 14 15 16 28 29 33 34 35 36 37 37 38 43 44 82 83 84 107 110 111
IF                   : 40 40 41 41
INT                  : 26
LET                  : 116
LT                   : 117
MINUS                : 74
MUL                  : 78
NE                   : 114
NOT                  : 95 96 97 98 99
NUMBER               : 13 15 15 16 85 108
OPAREN               : 15 16 34 35 66 69 70 83 84 87 106 110 111
OR                   : 96 98 102
PLUS                 : 73
PROGRAM              : 3 3
READ                 : 38
REAL                 : 14 27 86 109
STRING               : 47
SUBROUTINE           : 28 28 29 29
THEN                 : 66 69 70
WRITE                : 39
error                : 

Nonterminals, with rules where they appear

andornot             : 95 95 96 96 97 97 98 98 99 101 102
callprocedure        : 36
correction           : 46
empty                : 12
ending               : 3
expression           : 33 34 34 34 35 35 43 43 43 44 44 46 73 74 83 84 84 87 110 110 111
iffs                 : 66 69
ifs                  : 40 41
logicexp             : 66 69 70 95 96 97 98 101 102 106
logicop              : 97 98 100 101 102
loopvars             : 10 11
p                    : 
paso1                : 82 107
paso12               : 85 108
paso13               : 86 109
paso14               : 83 84
paso1bool            : 40 41
paso1dim             : 15 16
paso1do              : 37 45
paso1for             : 43 44
paso1lgexp           : 97 98 100 101 102
paso1subroutine      : 28 29
paso23               : 73 74 78 79
paso2bool            : 66 69 70
paso2dim             : 15 16
paso2do              : 37 45
paso2for             : 43 44
paso2lgexp           : 95 95 96 96 97 97 98 98 99 100 101 101 102 102
paso2subroutine      : 28 29
paso3bool            : 40 69 70
paso3dim             : 15 16
paso3for             : 43 44
paso4                : 73 73 74 74 75
paso4bool            : 40 41
paso4dim             : 15
paso4do              : 42
paso4for1            : 43
paso4for2            : 44
paso5                : 78 78 79 79 80
paso51dim            : 16
paso52dim            : 15
paso6                : 87
paso7                : 87
paso8                : 33 34 35
paso9                : 33 34 35
pasogetdim           : 35 83
pasogetdim1          : 34 84
pasogetdim2          : 34 84
pasonot              : 95 96 97 98 99
programa             : 0
readquad             : 38
slogicexp            : 95 96 97 97 98 98 99 100 100 101 101 102 102
ssubexpression       : 78 79 80
statement            : 23 24
statements           : 3 23 28 29 37 40 43 44 45 66 69 70
subexpression        : 73 74 75 78 79
subroutines          : 3 28
tipo                 : 10 13 14 15 16
variables            : 3 5 6 7 8
variables1           : 5
variables2           : 6
variables3           : 7
variables4           : 8
write                : 39
writequad            : 39

Parsing method: LALR

state 0

    (0) S' -> . programa
    (3) programa -> . PROGRAM ID variables statements END PROGRAM ID ending subroutines

    PROGRAM         shift and go to state 1

    programa                       shift and go to state 2

state 1

    (3) programa -> PROGRAM . ID variables statements END PROGRAM ID ending subroutines

    ID              shift and go to state 3


state 2

    (0) S' -> programa .



state 3

    (3) programa -> PROGRAM ID . variables statements END PROGRAM ID ending subroutines
    (5) variables -> . variables variables1
    (6) variables -> . variables variables2
    (7) variables -> . variables variables3
    (8) variables -> . variables variables4
    (9) variables -> .

    ID              reduce using rule 9 (variables -> .)
    CALL            reduce using rule 9 (variables -> .)
    READ            reduce using rule 9 (variables -> .)
    WRITE           reduce using rule 9 (variables -> .)
    IF              reduce using rule 9 (variables -> .)
    EXIT            reduce using rule 9 (variables -> .)
    DO              reduce using rule 9 (variables -> .)
    INT             reduce using rule 9 (variables -> .)
    REAL            reduce using rule 9 (variables -> .)
    END             reduce using rule 9 (variables -> .)

    variables                      shift and go to state 4

state 4

    (3) programa -> PROGRAM ID variables . statements END PROGRAM ID ending subroutines
    (5) variables -> variables . variables1
    (6) variables -> variables . variables2
    (7) variables -> variables . variables3
    (8) variables -> variables . variables4
    (23) statements -> . statements statement
    (24) statements -> . statement
    (25) statements -> .
    (10) variables1 -> . tipo ID loopvars
    (13) variables2 -> . tipo ID EQUAL NUMBER
    (14) variables2 -> . tipo ID EQUAL REAL
    (15) variables3 -> . tipo ID paso1dim OPAREN paso2dim NUMBER paso3dim COMMA NUMBER paso4dim CPAREN paso52dim
    (16) variables4 -> . tipo ID paso1dim OPAREN paso2dim NUMBER paso3dim CPAREN paso51dim
    (33) statement -> . ID paso8 EQUAL expression paso9
    (34) statement -> . ID paso8 OPAREN expression pasogetdim1 COMMA expression pasogetdim2 CPAREN EQUAL expression paso9
    (35) statement -> . ID paso8 OPAREN expression pasogetdim CPAREN EQUAL expression paso9
    (36) statement -> . CALL ID callprocedure
    (37) statement -> . ID COLLON DO paso1do statements paso2do END DO ID
    (38) statement -> . READ ID readquad
    (39) statement -> . WRITE write writequad
    (40) statement -> . IF paso1bool ifs ELSE paso3bool statements END IF paso4bool
    (41) statement -> . IF paso1bool ifs END IF paso4bool
    (42) statement -> . EXIT paso4do
    (43) statement -> . DO ID paso1for EQUAL expression paso2for COMMA expression paso3for COMMA expression statements paso4for1 END DO
    (44) statement -> . DO ID paso1for EQUAL expression paso2for COMMA expression paso3for statements paso4for2 END DO
    (45) statement -> . DO paso1do statements paso2do END DO
    (26) tipo -> . INT
    (27) tipo -> . REAL

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for CALL resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for EXIT resolved as shift
  ! shift/reduce conflict for DO resolved as shift
    END             reduce using rule 25 (statements -> .)
    ID              shift and go to state 15
    CALL            shift and go to state 20
    READ            shift and go to state 8
    WRITE           shift and go to state 16
    IF              shift and go to state 12
    EXIT            shift and go to state 11
    DO              shift and go to state 7
    INT             shift and go to state 13
    REAL            shift and go to state 5

  ! ID              [ reduce using rule 25 (statements -> .) ]
  ! CALL            [ reduce using rule 25 (statements -> .) ]
  ! READ            [ reduce using rule 25 (statements -> .) ]
  ! WRITE           [ reduce using rule 25 (statements -> .) ]
  ! IF              [ reduce using rule 25 (statements -> .) ]
  ! EXIT            [ reduce using rule 25 (statements -> .) ]
  ! DO              [ reduce using rule 25 (statements -> .) ]

    statements                     shift and go to state 6
    tipo                           shift and go to state 9
    statement                      shift and go to state 10
    variables3                     shift and go to state 17
    variables2                     shift and go to state 18
    variables1                     shift and go to state 19
    variables4                     shift and go to state 14

state 5

    (27) tipo -> REAL .

    ID              reduce using rule 27 (tipo -> REAL .)


state 6

    (3) programa -> PROGRAM ID variables statements . END PROGRAM ID ending subroutines
    (23) statements -> statements . statement
    (33) statement -> . ID paso8 EQUAL expression paso9
    (34) statement -> . ID paso8 OPAREN expression pasogetdim1 COMMA expression pasogetdim2 CPAREN EQUAL expression paso9
    (35) statement -> . ID paso8 OPAREN expression pasogetdim CPAREN EQUAL expression paso9
    (36) statement -> . CALL ID callprocedure
    (37) statement -> . ID COLLON DO paso1do statements paso2do END DO ID
    (38) statement -> . READ ID readquad
    (39) statement -> . WRITE write writequad
    (40) statement -> . IF paso1bool ifs ELSE paso3bool statements END IF paso4bool
    (41) statement -> . IF paso1bool ifs END IF paso4bool
    (42) statement -> . EXIT paso4do
    (43) statement -> . DO ID paso1for EQUAL expression paso2for COMMA expression paso3for COMMA expression statements paso4for1 END DO
    (44) statement -> . DO ID paso1for EQUAL expression paso2for COMMA expression paso3for statements paso4for2 END DO
    (45) statement -> . DO paso1do statements paso2do END DO

    END             shift and go to state 22
    ID              shift and go to state 15
    CALL            shift and go to state 20
    READ            shift and go to state 8
    WRITE           shift and go to state 16
    IF              shift and go to state 12
    EXIT            shift and go to state 11
    DO              shift and go to state 7

    statement                      shift and go to state 21

state 7

    (43) statement -> DO . ID paso1for EQUAL expression paso2for COMMA expression paso3for COMMA expression statements paso4for1 END DO
    (44) statement -> DO . ID paso1for EQUAL expression paso2for COMMA expression paso3for statements paso4for2 END DO
    (45) statement -> DO . paso1do statements paso2do END DO
    (51) paso1do -> .

  ! shift/reduce conflict for ID resolved as shift
    ID              shift and go to state 24
    CALL            reduce using rule 51 (paso1do -> .)
    READ            reduce using rule 51 (paso1do -> .)
    WRITE           reduce using rule 51 (paso1do -> .)
    IF              reduce using rule 51 (paso1do -> .)
    EXIT            reduce using rule 51 (paso1do -> .)
    DO              reduce using rule 51 (paso1do -> .)
    END             reduce using rule 51 (paso1do -> .)

  ! ID              [ reduce using rule 51 (paso1do -> .) ]

    paso1do                        shift and go to state 23

state 8

    (38) statement -> READ . ID readquad

    ID              shift and go to state 25


state 9

    (10) variables1 -> tipo . ID loopvars
    (13) variables2 -> tipo . ID EQUAL NUMBER
    (14) variables2 -> tipo . ID EQUAL REAL
    (15) variables3 -> tipo . ID paso1dim OPAREN paso2dim NUMBER paso3dim COMMA NUMBER paso4dim CPAREN paso52dim
    (16) variables4 -> tipo . ID paso1dim OPAREN paso2dim NUMBER paso3dim CPAREN paso51dim

    ID              shift and go to state 26


state 10

    (24) statements -> statement .

    ID              reduce using rule 24 (statements -> statement .)
    CALL            reduce using rule 24 (statements -> statement .)
    READ            reduce using rule 24 (statements -> statement .)
    WRITE           reduce using rule 24 (statements -> statement .)
    IF              reduce using rule 24 (statements -> statement .)
    EXIT            reduce using rule 24 (statements -> statement .)
    DO              reduce using rule 24 (statements -> statement .)
    ELSIF           reduce using rule 24 (statements -> statement .)
    ELSE            reduce using rule 24 (statements -> statement .)
    END             reduce using rule 24 (statements -> statement .)


state 11

    (42) statement -> EXIT . paso4do
    (72) paso4do -> .

    END             reduce using rule 72 (paso4do -> .)
    ID              reduce using rule 72 (paso4do -> .)
    CALL            reduce using rule 72 (paso4do -> .)
    READ            reduce using rule 72 (paso4do -> .)
    WRITE           reduce using rule 72 (paso4do -> .)
    IF              reduce using rule 72 (paso4do -> .)
    EXIT            reduce using rule 72 (paso4do -> .)
    DO              reduce using rule 72 (paso4do -> .)
    ELSIF           reduce using rule 72 (paso4do -> .)
    ELSE            reduce using rule 72 (paso4do -> .)

    paso4do                        shift and go to state 27

state 12

    (40) statement -> IF . paso1bool ifs ELSE paso3bool statements END IF paso4bool
    (41) statement -> IF . paso1bool ifs END IF paso4bool
    (49) paso1bool -> .

    OPAREN          reduce using rule 49 (paso1bool -> .)

    paso1bool                      shift and go to state 28

state 13

    (26) tipo -> INT .

    ID              reduce using rule 26 (tipo -> INT .)


state 14

    (8) variables -> variables variables4 .

    ID              reduce using rule 8 (variables -> variables variables4 .)
    CALL            reduce using rule 8 (variables -> variables variables4 .)
    READ            reduce using rule 8 (variables -> variables variables4 .)
    WRITE           reduce using rule 8 (variables -> variables variables4 .)
    IF              reduce using rule 8 (variables -> variables variables4 .)
    EXIT            reduce using rule 8 (variables -> variables variables4 .)
    DO              reduce using rule 8 (variables -> variables variables4 .)
    INT             reduce using rule 8 (variables -> variables variables4 .)
    REAL            reduce using rule 8 (variables -> variables variables4 .)
    END             reduce using rule 8 (variables -> variables variables4 .)


state 15

    (33) statement -> ID . paso8 EQUAL expression paso9
    (34) statement -> ID . paso8 OPAREN expression pasogetdim1 COMMA expression pasogetdim2 CPAREN EQUAL expression paso9
    (35) statement -> ID . paso8 OPAREN expression pasogetdim CPAREN EQUAL expression paso9
    (37) statement -> ID . COLLON DO paso1do statements paso2do END DO ID
    (60) paso8 -> .

    COLLON          shift and go to state 29
    EQUAL           reduce using rule 60 (paso8 -> .)
    OPAREN          reduce using rule 60 (paso8 -> .)

    paso8                          shift and go to state 30

state 16

    (39) statement -> WRITE . write writequad
    (46) write -> . expression correction
    (47) write -> . STRING
    (73) expression -> . expression paso4 PLUS paso23 subexpression paso4
    (74) expression -> . expression paso4 MINUS paso23 subexpression paso4
    (75) expression -> . subexpression paso4
    (78) subexpression -> . subexpression paso5 MUL paso23 ssubexpression paso5
    (79) subexpression -> . subexpression paso5 DIV paso23 ssubexpression paso5
    (80) subexpression -> . ssubexpression paso5
    (82) ssubexpression -> . ID paso1
    (83) ssubexpression -> . ID paso14 OPAREN expression pasogetdim CPAREN
    (84) ssubexpression -> . ID paso14 OPAREN expression pasogetdim1 COMMA expression pasogetdim2 CPAREN
    (85) ssubexpression -> . NUMBER paso12
    (86) ssubexpression -> . REAL paso13
    (87) ssubexpression -> . OPAREN paso6 expression CPAREN paso7

    STRING          shift and go to state 35
    ID              shift and go to state 33
    NUMBER          shift and go to state 32
    REAL            shift and go to state 31
    OPAREN          shift and go to state 38

    subexpression                  shift and go to state 36
    write                          shift and go to state 34
    ssubexpression                 shift and go to state 37
    expression                     shift and go to state 39

state 17

    (7) variables -> variables variables3 .

    ID              reduce using rule 7 (variables -> variables variables3 .)
    CALL            reduce using rule 7 (variables -> variables variables3 .)
    READ            reduce using rule 7 (variables -> variables variables3 .)
    WRITE           reduce using rule 7 (variables -> variables variables3 .)
    IF              reduce using rule 7 (variables -> variables variables3 .)
    EXIT            reduce using rule 7 (variables -> variables variables3 .)
    DO              reduce using rule 7 (variables -> variables variables3 .)
    INT             reduce using rule 7 (variables -> variables variables3 .)
    REAL            reduce using rule 7 (variables -> variables variables3 .)
    END             reduce using rule 7 (variables -> variables variables3 .)


state 18

    (6) variables -> variables variables2 .

    ID              reduce using rule 6 (variables -> variables variables2 .)
    CALL            reduce using rule 6 (variables -> variables variables2 .)
    READ            reduce using rule 6 (variables -> variables variables2 .)
    WRITE           reduce using rule 6 (variables -> variables variables2 .)
    IF              reduce using rule 6 (variables -> variables variables2 .)
    EXIT            reduce using rule 6 (variables -> variables variables2 .)
    DO              reduce using rule 6 (variables -> variables variables2 .)
    INT             reduce using rule 6 (variables -> variables variables2 .)
    REAL            reduce using rule 6 (variables -> variables variables2 .)
    END             reduce using rule 6 (variables -> variables variables2 .)


state 19

    (5) variables -> variables variables1 .

    ID              reduce using rule 5 (variables -> variables variables1 .)
    CALL            reduce using rule 5 (variables -> variables variables1 .)
    READ            reduce using rule 5 (variables -> variables variables1 .)
    WRITE           reduce using rule 5 (variables -> variables variables1 .)
    IF              reduce using rule 5 (variables -> variables variables1 .)
    EXIT            reduce using rule 5 (variables -> variables variables1 .)
    DO              reduce using rule 5 (variables -> variables variables1 .)
    INT             reduce using rule 5 (variables -> variables variables1 .)
    REAL            reduce using rule 5 (variables -> variables variables1 .)
    END             reduce using rule 5 (variables -> variables variables1 .)


state 20

    (36) statement -> CALL . ID callprocedure

    ID              shift and go to state 40


state 21

    (23) statements -> statements statement .

    ID              reduce using rule 23 (statements -> statements statement .)
    CALL            reduce using rule 23 (statements -> statements statement .)
    READ            reduce using rule 23 (statements -> statements statement .)
    WRITE           reduce using rule 23 (statements -> statements statement .)
    IF              reduce using rule 23 (statements -> statements statement .)
    EXIT            reduce using rule 23 (statements -> statements statement .)
    DO              reduce using rule 23 (statements -> statements statement .)
    ELSIF           reduce using rule 23 (statements -> statements statement .)
    ELSE            reduce using rule 23 (statements -> statements statement .)
    END             reduce using rule 23 (statements -> statements statement .)


state 22

    (3) programa -> PROGRAM ID variables statements END . PROGRAM ID ending subroutines

    PROGRAM         shift and go to state 41


state 23

    (45) statement -> DO paso1do . statements paso2do END DO
    (23) statements -> . statements statement
    (24) statements -> . statement
    (25) statements -> .
    (33) statement -> . ID paso8 EQUAL expression paso9
    (34) statement -> . ID paso8 OPAREN expression pasogetdim1 COMMA expression pasogetdim2 CPAREN EQUAL expression paso9
    (35) statement -> . ID paso8 OPAREN expression pasogetdim CPAREN EQUAL expression paso9
    (36) statement -> . CALL ID callprocedure
    (37) statement -> . ID COLLON DO paso1do statements paso2do END DO ID
    (38) statement -> . READ ID readquad
    (39) statement -> . WRITE write writequad
    (40) statement -> . IF paso1bool ifs ELSE paso3bool statements END IF paso4bool
    (41) statement -> . IF paso1bool ifs END IF paso4bool
    (42) statement -> . EXIT paso4do
    (43) statement -> . DO ID paso1for EQUAL expression paso2for COMMA expression paso3for COMMA expression statements paso4for1 END DO
    (44) statement -> . DO ID paso1for EQUAL expression paso2for COMMA expression paso3for statements paso4for2 END DO
    (45) statement -> . DO paso1do statements paso2do END DO

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for CALL resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for EXIT resolved as shift
  ! shift/reduce conflict for DO resolved as shift
    END             reduce using rule 25 (statements -> .)
    ID              shift and go to state 15
    CALL            shift and go to state 20
    READ            shift and go to state 8
    WRITE           shift and go to state 16
    IF              shift and go to state 12
    EXIT            shift and go to state 11
    DO              shift and go to state 7

  ! ID              [ reduce using rule 25 (statements -> .) ]
  ! CALL            [ reduce using rule 25 (statements -> .) ]
  ! READ            [ reduce using rule 25 (statements -> .) ]
  ! WRITE           [ reduce using rule 25 (statements -> .) ]
  ! IF              [ reduce using rule 25 (statements -> .) ]
  ! EXIT            [ reduce using rule 25 (statements -> .) ]
  ! DO              [ reduce using rule 25 (statements -> .) ]

    statements                     shift and go to state 42
    statement                      shift and go to state 10

state 24

    (43) statement -> DO ID . paso1for EQUAL expression paso2for COMMA expression paso3for COMMA expression statements paso4for1 END DO
    (44) statement -> DO ID . paso1for EQUAL expression paso2for COMMA expression paso3for statements paso4for2 END DO
    (53) paso1for -> .

    EQUAL           reduce using rule 53 (paso1for -> .)

    paso1for                       shift and go to state 43

state 25

    (38) statement -> READ ID . readquad
    (59) readquad -> .

    END             reduce using rule 59 (readquad -> .)
    ID              reduce using rule 59 (readquad -> .)
    CALL            reduce using rule 59 (readquad -> .)
    READ            reduce using rule 59 (readquad -> .)
    WRITE           reduce using rule 59 (readquad -> .)
    IF              reduce using rule 59 (readquad -> .)
    EXIT            reduce using rule 59 (readquad -> .)
    DO              reduce using rule 59 (readquad -> .)
    ELSIF           reduce using rule 59 (readquad -> .)
    ELSE            reduce using rule 59 (readquad -> .)

    readquad                       shift and go to state 44

state 26

    (10) variables1 -> tipo ID . loopvars
    (13) variables2 -> tipo ID . EQUAL NUMBER
    (14) variables2 -> tipo ID . EQUAL REAL
    (15) variables3 -> tipo ID . paso1dim OPAREN paso2dim NUMBER paso3dim COMMA NUMBER paso4dim CPAREN paso52dim
    (16) variables4 -> tipo ID . paso1dim OPAREN paso2dim NUMBER paso3dim CPAREN paso51dim
    (11) loopvars -> . loopvars COMMA ID
    (12) loopvars -> . empty
    (17) paso1dim -> .
    (2) empty -> .

    EQUAL           shift and go to state 47
    OPAREN          reduce using rule 17 (paso1dim -> .)
    COMMA           reduce using rule 2 (empty -> .)
    ID              reduce using rule 2 (empty -> .)
    CALL            reduce using rule 2 (empty -> .)
    READ            reduce using rule 2 (empty -> .)
    WRITE           reduce using rule 2 (empty -> .)
    IF              reduce using rule 2 (empty -> .)
    EXIT            reduce using rule 2 (empty -> .)
    DO              reduce using rule 2 (empty -> .)
    INT             reduce using rule 2 (empty -> .)
    REAL            reduce using rule 2 (empty -> .)
    END             reduce using rule 2 (empty -> .)

    loopvars                       shift and go to state 45
    paso1dim                       shift and go to state 46
    empty                          shift and go to state 48

state 27

    (42) statement -> EXIT paso4do .

    ID              reduce using rule 42 (statement -> EXIT paso4do .)
    CALL            reduce using rule 42 (statement -> EXIT paso4do .)
    READ            reduce using rule 42 (statement -> EXIT paso4do .)
    WRITE           reduce using rule 42 (statement -> EXIT paso4do .)
    IF              reduce using rule 42 (statement -> EXIT paso4do .)
    EXIT            reduce using rule 42 (statement -> EXIT paso4do .)
    DO              reduce using rule 42 (statement -> EXIT paso4do .)
    ELSIF           reduce using rule 42 (statement -> EXIT paso4do .)
    ELSE            reduce using rule 42 (statement -> EXIT paso4do .)
    END             reduce using rule 42 (statement -> EXIT paso4do .)


state 28

    (40) statement -> IF paso1bool . ifs ELSE paso3bool statements END IF paso4bool
    (41) statement -> IF paso1bool . ifs END IF paso4bool
    (66) ifs -> . OPAREN logicexp CPAREN paso2bool THEN statements iffs

    OPAREN          shift and go to state 50

    ifs                            shift and go to state 49

state 29

    (37) statement -> ID COLLON . DO paso1do statements paso2do END DO ID

    DO              shift and go to state 51


state 30

    (33) statement -> ID paso8 . EQUAL expression paso9
    (34) statement -> ID paso8 . OPAREN expression pasogetdim1 COMMA expression pasogetdim2 CPAREN EQUAL expression paso9
    (35) statement -> ID paso8 . OPAREN expression pasogetdim CPAREN EQUAL expression paso9

    EQUAL           shift and go to state 52
    OPAREN          shift and go to state 53


state 31

    (86) ssubexpression -> REAL . paso13
    (90) paso13 -> .

    MUL             reduce using rule 90 (paso13 -> .)
    DIV             reduce using rule 90 (paso13 -> .)
    PLUS            reduce using rule 90 (paso13 -> .)
    MINUS           reduce using rule 90 (paso13 -> .)
    END             reduce using rule 90 (paso13 -> .)
    ID              reduce using rule 90 (paso13 -> .)
    CALL            reduce using rule 90 (paso13 -> .)
    READ            reduce using rule 90 (paso13 -> .)
    WRITE           reduce using rule 90 (paso13 -> .)
    IF              reduce using rule 90 (paso13 -> .)
    EXIT            reduce using rule 90 (paso13 -> .)
    DO              reduce using rule 90 (paso13 -> .)
    ELSIF           reduce using rule 90 (paso13 -> .)
    ELSE            reduce using rule 90 (paso13 -> .)
    COMMA           reduce using rule 90 (paso13 -> .)
    CPAREN          reduce using rule 90 (paso13 -> .)

    paso13                         shift and go to state 54

state 32

    (85) ssubexpression -> NUMBER . paso12
    (89) paso12 -> .

    MUL             reduce using rule 89 (paso12 -> .)
    DIV             reduce using rule 89 (paso12 -> .)
    PLUS            reduce using rule 89 (paso12 -> .)
    MINUS           reduce using rule 89 (paso12 -> .)
    END             reduce using rule 89 (paso12 -> .)
    ID              reduce using rule 89 (paso12 -> .)
    CALL            reduce using rule 89 (paso12 -> .)
    READ            reduce using rule 89 (paso12 -> .)
    WRITE           reduce using rule 89 (paso12 -> .)
    IF              reduce using rule 89 (paso12 -> .)
    EXIT            reduce using rule 89 (paso12 -> .)
    DO              reduce using rule 89 (paso12 -> .)
    ELSIF           reduce using rule 89 (paso12 -> .)
    ELSE            reduce using rule 89 (paso12 -> .)
    COMMA           reduce using rule 89 (paso12 -> .)
    CPAREN          reduce using rule 89 (paso12 -> .)

    paso12                         shift and go to state 55

state 33

    (82) ssubexpression -> ID . paso1
    (83) ssubexpression -> ID . paso14 OPAREN expression pasogetdim CPAREN
    (84) ssubexpression -> ID . paso14 OPAREN expression pasogetdim1 COMMA expression pasogetdim2 CPAREN
    (88) paso1 -> .
    (91) paso14 -> .
